Added new skill

--- a/index.html
+++ b/index.html
@@ -60,7 +60,10 @@
 		<div class='container'>
 			<h2> Skills </h2>
 			<div class='row' id='skills'>
-				<div class='span1 skill' rel='popover' title ='Skill Name' data-content='Skill description can be a little bit longer' data-placement='bottom' data-trigger='hover'>
+				<div class='span1 skill' rel='popover' title ='French' data-content='Mother tongue' data-placement='bottom' data-trigger='hover'>
+					<img class='img-rounded' src='http://placehold.it/50x50'/>
+				</div>
+				<div class='span1 skill' rel='popover' title ='English' data-content='Fluent : TOEFL IBT : 118/120' data-placement='bottom' data-trigger='hover'>
 					<img class='img-rounded' src='http://placehold.it/50x50'/>
 				</div>
 			</div>
