Changed Project - Added images

--- a/index.html
+++ b/index.html
@@ -12,133 +12,203 @@
 	<div class='hero-unit'>
 		<h1> Jean Caillé </h1>
 		<p> Student and aspiring entrepreneur at Ecole Polytechnique. </p>
+		<p> I'm currently looking for : <strong> A 3 to 5 months research internship, starting April 2013. </strong></p>
 	</div>
 	<div class='container'>
-		<div class='row'>
+		<div class='row-fluid'>
 			<div class='span3'>
 				<img class='img-circle' src='http://placehold.it/150x150' id='myPicture'>
 			</div>
 			<div class='span9'>
-				<h2> Hi !</h2>
-				<p> My name is Jean, I'm a third year student at the Ecole Polytechnique. Currently majoring in computer science, I'm thorouglhy interested in startups, and have up to know worked on several school and side projects related to entrepreneurship. If you'd like to know more about me, you can just scroll down, or grab my CV. </p>
+				<h2>Hi !</h2>
+				<p>My name is Jean, I'm a third year student at the Ecole Polytechnique. Currently majoring in computer science, I'm thorouglhy interested in startups, and have up to know worked on several school and side projects related to entrepreneurship. I'm currently in the market for a 3 to 5 months research internship at a startup.  If you'd like to know more about me, you can just scroll down, or grab my CV. </p>
 			</div>
 		</div>
-	</div>
-		<div class='hero-unit' id='projects'>
-			<div class='row-fluid'>
-				<div class='span4'>
-					<h2> Projects I've been working on :</h2>
+		<hr/>
+		<H1> Projects I've been working on :</H1>
+		<ul class='thumbnails' id='projects'>
+			<li class='span6'>
+				<div class="thumbnail mainProject">
+					<img src="img/rmc.png" class='img-rounded' alt="">
+					<h3>RateMyClass <small>Side Project - 2012 </small> </h3>
+					<p>RateMyClass is an internal school website a friend and I developed last year. It provides coherent information on classes at the Ecole Polytechnique based on a wide response from student opinion. The website gathered hundreds of comments in the first few days, and we are currently looking for ways to monetize and expand this service. </p>
 				</div>
-				<div class='span4'>
-					<img src='img/rmc.jpg'>
-					<div class='description'>
-						<h3>RateMyClass</h3>
-						<p><strong>Side Project ; 2012</strong> : RateMyClass is an internal school website a friend and I developed last year. It provides coherent information on classes at the Ecole Polytechnique based on a wide response from student opinion. The website is still in activity, and will be maintained and improved by the student government when we will leave campus. </p>
-					</div>
+			</li>
+			<li class='span6'>
+				<div class="thumbnail mainProject">
+					<img src="img/codebar.png" class='img-rounded'>
+					<h3>CodeBar <small>Side Project - 2012</small></h3>
+					<p>CodeBar is a service that will allow users to place orders in busy bars using their phone. We’re a team of four people wanting to get a first hands-on experience with entrepreneurship. I started working on the web application a few months ago, and we’re currently looking for a bar willing to test our service and partner with us. </p>
 				</div>
-				<div class='span4'>
-					<h3>CodeBar</h3>
-					<p><strong>Side Project : 2012</strong> : CodeBar is a service that will allow users to place orders in busy bars using their phone. We’re a team of four people wanting to get a first hands-on experience with entrepreneurship. I started working on the web application a few months ago, and we’re currently looking for a bar willing to test our service and partner with us. </p>
+			</li>
+			<li class='span4'>
+				<div class="thumbnail smallProject">
+					<img src="img/magnan.jpg" class='img-rounded'>
+					<p>With a team of 6, we created a pragmatic device that would recognize the content of one’s tray in the school cafeteria</p>
 				</div>
+			</li>
+			<li class='span4'>
+				<div class="thumbnail smallProject">
+					<img src="img/triceratop.png" class='img-rounded'>
+					<p>We implemented the algorithm described in Fast and Exact Computation of Geodesic Distance on Triangular Meshes</p>
+				</div>
+			</li>
+			<li class='span4'>
+				<div class="thumbnail smallProject">
+					<img src="img/graphcut.png" class='img-rounded'>
+					<p>I worked on a simple reconstruction of stereographic 3D using GraphCut algorithms as part of a school project.</p>
+				</div>
+			</li>
+		</ul>
+		<hr/>
+		<h2> Skills </h2>
+		<div class='row-fluid' id='skills-header'>
+			<div class='span2'>
+				<h4>Languages</h4>
+				<hr/>
 			</div>
-			<div class='row-fluid'>
-				<div class='span4'>
-					<h3>Team Research Project</h3>
-					<p><strong>School Project ; 2011 - 2012</strong> : With a team of 6, we created a pragmatic device that would recognize the content of one’s tray in the school cafeteria. The Jury congratulated us on our results even though I would have liked to have more time to improve the algorithm and integrate our device with existing cash registers. </p>
-				</div>
-				<div class='span4'>
-					<h3>Computer Graphics Project</h3>
-					<p><strong> School Project ; 2012 </strong> With a friend, we implemented the algorithm described in Fast and Exact Computation of Geodesic Distance on Triangular Meshes. We also implemented subdivision schemes allowing for a finer representation of the distance field. The code is available on Github.</p>
-				</div>
-				<div class='span4'>
-					<h3>Computer Vision Project</h3>
-					<p><strong> School Project ; 2012 </strong> I worked on reconstructing stereographic 3D using GraphCut algorithms. Even though this project was pretty limited in scope, I see it as a stepping-stone into more interesting computer vision problems. </p>
-				</div>
+			<div class='span4'>
+				<h4>Programming Languages</h4>
+				<hr/>
+			</div>
+			<div class='span3'>
+				<h4>Libraries and tools</h4>
+				<hr/>
+			</div>
+			<div class='span3'>
+				<h4>On the side</h4>
+				<hr/>
 			</div>
 		</div>
+		<div class='row-fluid' id='skills'>
+			<div class='span1 skill' rel='popover' title ='French' data-content='Mother tongue' data-placement='bottom' data-trigger='hover'>
+				<h4>FR</h4>
+			</div>
 
-		<div class='container'>
-			<h2> Skills </h2>
-			<div class='row' id='skills'>
-				<div class='span1 skill' rel='popover' title ='French' data-content='Mother tongue' data-placement='bottom' data-trigger='hover'>
-					<img class='img-rounded' src='http://placehold.it/50x50'/>
-				</div>
-				<div class='span1 skill' rel='popover' title ='English' data-content='Fluent : TOEFL IBT : 118/120' data-placement='bottom' data-trigger='hover'>
-					<img class='img-rounded' src='http://placehold.it/50x50'/>
-				</div>
+			<div class='span1 skill' rel='popover' title ='English' data-content='Fluent : TOEFL IBT : 118/120' data-placement='bottom' data-trigger='hover'>
+				<h4>EN</h4>
 			</div>
-			<div class='row' id='cv'>
-				<div class='span6' id='education'>
-					<h2> Education </h2>
-					<div class='row'>
-						<div class='span2'>
-							<h4>2010 - 2013</h4>
-						</div>
-						<div class='span4'>
-							<h3> Ecole Polytecnique </h3>
-							<p>Currently in third-year at France’s leading university for high-level scientific training. Majoring in <strong>Computer Science</strong> and Computer Vision.</p>
-						</div>
+
+			<div class='span1 skill' rel='popover' title ='Python' data-content='Python 2.7 - Used in prototyping and production settings. Used major libary such as numpy and PIL.' data-placement='bottom' data-trigger='hover'>
+				<h4>.py</h4>
+			</div>
+
+			<div class='span1 skill' rel='popover' title ='Web Developement' data-content='HTML5 + CSS3 + Javacript - developped multiple website using libraries and framework such as jquery, backbone and bootstrap. Currently learning Django.' data-placement='bottom' data-trigger='hover'>
+				<h4>.php</h4>
+			</div>
+
+			<div class='span1 skill' rel='popover' title ='Java' data-content='Used as a learning tool - Familliar with most concept of OO-Programming.' data-placement='bottom' data-trigger='hover'>
+				<h4>.java</h4>
+			</div>
+
+			<div class='span1 skill' rel='popover' title ='C++' data-content='Used as a tool during a couple of projects. Basic knowledge of pointers and memory management.' data-placement='bottom' data-trigger='hover'>
+				<h4>.cpp</h4>
+			</div>
+
+			<div class='span1 skill' rel='popover' title ='Git' data-content='Routinely use git to manage side-rpojects, as well as to organize collaboration during group projects in class.' data-placement='bottom' data-trigger='hover'>
+				<h4>git</h4>
+			</div>
+
+			<div class='span1 skill' rel='popover' title ='OpenGL' data-content='Used OpenGL as well as OpenSceneGraph, both in C++ and Python.' data-placement='bottom' data-trigger='hover'>
+				<h4>GL</h4>
+			</div>
+
+			<div class='span1 skill' rel='popover' title ='OpenCV' data-content='Basic knowledge of OpenCV tools and paradigms.' data-placement='bottom' data-trigger='hover'>
+				<h4>CV</h4>
+			</div>
+
+			<div class='span1 skill' rel='popover' title ='Adobe Creative Suite' data-content='Learned and used Photoshop, Premiere and After-effect CS6 when part of the Ecole Polytechnique video-association to create short humoristic films about life on campus.' data-placement='bottom' data-trigger='hover'>
+				<h4>CS6</h4>
+			</div>
+
+			<div class='span1 skill' rel='popover' title ='Guitar' data-content='Played the guitar for more than 10 years.' data-placement='bottom' data-trigger='hover'>
+				<h4>Am7#</h4>
+			</div>
+
+			<div class='span1 skill' rel='popover' title ="Improv'" data-content='Member of the Ecole Polytechnique Improvisational theatre team.' data-placement='bottom' data-trigger='hover'>
+				<h4>:-O</h4>
+			</div>
+
+		</div>
+		<hr/>
+		<div class='row' id='cv'>
+			<div class='span6' id='education'>
+				<h2> Education </h2>
+				<div class='row'>
+					<div class='span2'>
+						<h4>2010 - 2013</h4>
 					</div>
-					<div class='row'>
-						<div class='span2'>
-							<h4>2008 - 2010</h4>
-						</div>
-						<div class='span4'>
-							<h3> Lycée Chateaubriand </h3>
-							<p>Two year intensive undergraduate program in <strong>mathematics, physics and engineering</strong> in preparation for the nationwide competitive examinations to the French Grandes Ecoles.</p>
-						</div>
-					</div>
-					<div class='row'>
-						<div class='span2'>
-							<h4>2006 - 2008</h4>
-						</div>
-						<div class='span4'>
-							<h3> Lycée Joliot-Curie </h3>
-							<p>French secondary school diploma in mathematics and physics. Graduated with <strong>high honors, and English-language European section honors.</strong></p>
-						</div>
+					<div class='span4'>
+						<h3> Ecole Polytecnique </h3>
+						<p>Currently in third-year at France’s leading university for high-level scientific training. Majoring in <strong>Computer Science</strong> and Computer Vision.</p>
 					</div>
 				</div>
-				<div class='span6'>
-					<h2> Work Experience </h2>
-					<div class='row'>
-						<div class='span2'>
-							<h4>Summer 2012</h4>
-						</div>
-						<div class='span4'>
-							<h3> Stupeflix </h3>
-							<p>Interned for two months in a French startup providing an online video making tool.
-								where I learned and used <strong>Python, OpenGL and OpenSceneGraph</strong>, as well as managed customer service on a day-to-day basis.</p>
-							</div>
-						</div>
-						<div class='row'>
-							<div class='span2'>
-								<h4>2011 - 2012</h4>
-							</div>
-							<div class='span4'>
-								<h3> XProjets </h3>
-								<p>Worked as manager of Public Relations at the <strong>Junior Entreprise of the Ecole Polytechnique</strong>. Designed and produced communication support including websites and poster</p>
-							</div>
-						</div>
-						<div class='row'>
-							<div class='span2'>
-								<h4>2010 - 2011</h4>
-							</div>
-							<div class='span4'>
-								<h3> French Navy </h3>
-								<p>Posted for 8 months in Abu Dhabi. Internship as part of the school curriculum.
-									<ul>
-										<li>Managed diplomatic cables for the joint staff.</li>
-										<li>Worked with a bi-national team of 30 people on operational planning.</li>
-									</ul>
-								</p>
-							</div>
-						</div>
+				<div class='row'>
+					<div class='span2'>
+						<h4>2008 - 2010</h4>
+					</div>
+					<div class='span4'>
+						<h3> Lycée Chateaubriand </h3>
+						<p>Two year intensive undergraduate program in <strong>mathematics, physics and engineering</strong> in preparation for the nationwide competitive examinations to the French Grandes Ecoles.</p>
+					</div>
+				</div>
+				<div class='row'>
+					<div class='span2'>
+						<h4>2006 - 2008</h4>
+					</div>
+					<div class='span4'>
+						<h3> Lycée Joliot-Curie </h3>
+						<p>French secondary school diploma in mathematics and physics. Graduated with <strong>high honors, and English-language European section honors.</strong></p>
 					</div>
 				</div>
 			</div>
-	<script src="http://code.jquery.com/jquery-latest.js"></script>
-	<script src="lib/bootstrap.min.js"></script>
-	<script src="main.js"></script>
+			<div class='span6'>
+				<h2> Work Experience </h2>
+				<div class='row'>
+					<div class='span2'>
+						<h4>Summer 2012</h4>
+					</div>
+					<div class='span4'>
+						<h3> Stupeflix </h3>
+						<p>Interned for two months in a French startup providing an online video making tool.
+							where I learned and used <strong>Python, OpenGL and OpenSceneGraph</strong>, as well as managed customer service on a day-to-day basis.</p>
+						</div>
+					</div>
+					<div class='row'>
+						<div class='span2'>
+							<h4>2011 - 2012</h4>
+						</div>
+						<div class='span4'>
+							<h3> XProjets </h3>
+							<p>Worked as manager of Public Relations at the <strong>Junior Entreprise of the Ecole Polytechnique</strong>. Designed and produced communication support including websites and poster</p>
+						</div>
+					</div>
+					<div class='row'>
+						<div class='span2'>
+							<h4>2010 - 2011</h4>
+						</div>
+						<div class='span4'>
+							<h3> French Navy </h3>
+							<p>Posted for 8 months in Abu Dhabi. Internship as part of the school curriculum.
+								<ul>
+									<li>Managed diplomatic cables for the joint staff.</li>
+									<li>Worked with a bi-national team of 30 people on operational planning.</li>
+								</ul>
+							</p>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div id='footer' class='container'>
+			<hr/>
+			<div class='row-fluid'>
+				<p> Attribution </p>
+			</div>
+		</div>
+		<script src="http://code.jquery.com/jquery-latest.js"></script>
+		<script src="lib/bootstrap.min.js"></script>
+		<script src="main.js"></script>
 
 	</body> 
 	</html>
