--- a/index.html
+++ b/index.html
@@ -9,23 +9,36 @@
 </head> 
 
 <body id="index" class="home">
-	<div class='hero-unit'>
+	<div class='hero-unit' id='hero'>
 		<h1> Jean Caillé </h1>
 		<p> Student and aspiring entrepreneur at Ecole Polytechnique. </p>
 		<p> I'm currently looking for : <strong> A 3 to 5 months research internship, starting April 2013. </strong></p>
 	</div>
 	<div class='container'>
-		<div class='row-fluid'>
+		<div class='row'>
 			<div class='span3'>
-				<img class='img-circle' src='http://placehold.it/150x150' id='myPicture'>
+				<img class='img-circle' src='img/headshot.jpg' id='myPicture'>
 			</div>
 			<div class='span9'>
-				<h2>Hi !</h2>
-				<p>My name is Jean, I'm a third year student at the Ecole Polytechnique. Currently majoring in computer science, I'm thorouglhy interested in startups, and have up to know worked on several school and side projects related to entrepreneurship. I'm currently in the market for a 3 to 5 months research internship at a startup.  If you'd like to know more about me, you can just scroll down, or grab my CV. </p>
+				<p><strong> Hello ! </strong> My name is Jean, I'm a third year student at the Ecole Polytechnique near Paris, France. Currently majoring in computer science, I'm thorouglhy interested in <strong>startups</strong>, and have up to know worked on several school and side projects related to entrepreneurship. I'm currently in the market for a <strong>3 to 5 months research internship</strong> at a startup. </p>
+				<p>Here, you'll find a short description of the <a href='#projectAnchor'>projects</a> i've been working on recently, as well as my skills and past work experiences.</p>
+				<hr>
+				<div class='row'>
+					<div class='span3 text-center'>
+						<a href='http://github.com/jcaille'> Github profile </a>
+					</div>
+					<div class='span3 text-center'>
+						<a href='linkedin.com/pub/jean-caillé/44/693/146/'> LinkedIn Profile </a>
+					</div>
+					<div class='span3 text-center'>
+						<a href='cv.pdf'> Classic CV </a>
+					</div>
+				</div>
 			</div>
 		</div>
-		<hr/>
-		<H1> Projects I've been working on :</H1>
+		<div id='projectAnchor' class='page-header'>
+			<h1 > Projects I've been working on :</h1>
+		</div>
 		<ul class='thumbnails' id='projects'>
 			<li class='span6'>
 				<div class="thumbnail mainProject">
@@ -60,80 +73,88 @@
 				</div>
 			</li>
 		</ul>
-		<hr/>
-		<h2> Skills </h2>
-		<div class='row-fluid' id='skills-header'>
-			<div class='span2'>
+		<div class='page-header' id='skillsAnchor'>
+			<h1> Skills </h1>
+		</div>
+
+		<div class='row text-center' id='skills'>
+			<div class='span2 skillSet'>
 				<h4>Languages</h4>
 				<hr/>
+				<div class='row'>
+					<div class='span1 skill' rel='popover' title ='French' data-content='Mother tongue' data-placement='bottom' data-trigger='hover'>
+						<h5>FR</h5>
+					</div>
+
+					<div class='span1 skill' rel='popover' title ='English' data-content='Fluent : TOEFL IBT : 118/120' data-placement='bottom' data-trigger='hover'>
+						<h5>EN</h5>
+					</div>
+				</div>
 			</div>
-			<div class='span4'>
+			<div class='span4 skillSet'>
 				<h4>Programming Languages</h4>
 				<hr/>
+				<div class='row'>
+					<div class='span1 skill' rel='popover' title ='Python' data-content='Python 2.7 - Used in prototyping and production settings. Used major libary such as numpy and PIL.' data-placement='bottom' data-trigger='hover'>
+						<h5>.py</h5>
+					</div>
+
+					<div class='span1 skill' rel='popover' title ='Web Developement' data-content='HTML5 + CSS3 + Javacript - developped multiple website using libraries and framework such as jquery, backbone and bootstrap. Currently learning Django.' data-placement='bottom' data-trigger='hover'>
+						<h5>.php</h5>
+					</div>
+
+					<div class='span1 skill' rel='popover' title ='Java' data-content='Used as a learning tool - Familliar with most concept of OO-Programming.' data-placement='bottom' data-trigger='hover'>
+						<h5>.java</h5>
+					</div>
+
+					<div class='span1 skill' rel='popover' title ='C++' data-content='Used as a tool during a couple of projects. Basic knowledge of pointers and memory management.' data-placement='bottom' data-trigger='hover'>
+						<h5>.cpp</h5>
+					</div>
+				</div>
 			</div>
-			<div class='span3'>
+			<div class='span3 skillSet'>
 				<h4>Libraries and tools</h4>
 				<hr/>
+				<div class='row'>
+					<div class='span1 skill' rel='popover' title ='Git' data-content='Routinely use git to manage side-projects, as well as to organize collaboration during group projects in class.' data-placement='bottom' data-trigger='hover'>
+						<h5>git</h5>
+					</div>
+
+					<div class='span1 skill' rel='popover' title ='OpenGL' data-content='Used OpenGL as well as OpenSceneGraph, both in C++ and Python.' data-placement='bottom' data-trigger='hover'>
+						<h5>GL</h5>
+					</div>
+
+					<div class='span1 skill' rel='popover' title ='OpenCV' data-content='Basic knowledge of OpenCV tools and paradigms.' data-placement='bottom' data-trigger='hover'>
+						<h5>CV</h5>
+					</div>
+				</div>
 			</div>
-			<div class='span3'>
-				<h4>On the side</h4>
-				<hr/>
+			<div class='span3 skillSet'>
+					<h4>On the side</h4>
+					<hr/>
+				<div class='row'>
+					<div class='span1 skill' rel='popover' title ='Adobe Creative Suite' data-content='Learned and used Photoshop, Premiere and After-effect CS6 when part of the Ecole Polytechnique video-association to create short humoristic films about life on campus.' data-placement='bottom' data-trigger='hover'>
+						<h5>CS6</h5>
+					</div>
+
+					<div class='span1 skill' rel='popover' title ='Guitar' data-content='Played the guitar for more than 10 years.' data-placement='bottom' data-trigger='hover'>
+						<h5>Am7#</h5>
+					</div>
+
+					<div class='span1 skill' rel='popover' title ="Improv'" data-content='Member of the Ecole Polytechnique Improvisational theatre team.' data-placement='bottom' data-trigger='hover'>
+						<h5>:-O</h5>
+					</div>
+				</div>
 			</div>
 		</div>
-		<div class='row-fluid' id='skills'>
-			<div class='span1 skill' rel='popover' title ='French' data-content='Mother tongue' data-placement='bottom' data-trigger='hover'>
-				<h4>FR</h4>
-			</div>
 
-			<div class='span1 skill' rel='popover' title ='English' data-content='Fluent : TOEFL IBT : 118/120' data-placement='bottom' data-trigger='hover'>
-				<h4>EN</h4>
-			</div>
-
-			<div class='span1 skill' rel='popover' title ='Python' data-content='Python 2.7 - Used in prototyping and production settings. Used major libary such as numpy and PIL.' data-placement='bottom' data-trigger='hover'>
-				<h4>.py</h4>
-			</div>
-
-			<div class='span1 skill' rel='popover' title ='Web Developement' data-content='HTML5 + CSS3 + Javacript - developped multiple website using libraries and framework such as jquery, backbone and bootstrap. Currently learning Django.' data-placement='bottom' data-trigger='hover'>
-				<h4>.php</h4>
-			</div>
-
-			<div class='span1 skill' rel='popover' title ='Java' data-content='Used as a learning tool - Familliar with most concept of OO-Programming.' data-placement='bottom' data-trigger='hover'>
-				<h4>.java</h4>
-			</div>
-
-			<div class='span1 skill' rel='popover' title ='C++' data-content='Used as a tool during a couple of projects. Basic knowledge of pointers and memory management.' data-placement='bottom' data-trigger='hover'>
-				<h4>.cpp</h4>
-			</div>
-
-			<div class='span1 skill' rel='popover' title ='Git' data-content='Routinely use git to manage side-rpojects, as well as to organize collaboration during group projects in class.' data-placement='bottom' data-trigger='hover'>
-				<h4>git</h4>
-			</div>
-
-			<div class='span1 skill' rel='popover' title ='OpenGL' data-content='Used OpenGL as well as OpenSceneGraph, both in C++ and Python.' data-placement='bottom' data-trigger='hover'>
-				<h4>GL</h4>
-			</div>
-
-			<div class='span1 skill' rel='popover' title ='OpenCV' data-content='Basic knowledge of OpenCV tools and paradigms.' data-placement='bottom' data-trigger='hover'>
-				<h4>CV</h4>
-			</div>
-
-			<div class='span1 skill' rel='popover' title ='Adobe Creative Suite' data-content='Learned and used Photoshop, Premiere and After-effect CS6 when part of the Ecole Polytechnique video-association to create short humoristic films about life on campus.' data-placement='bottom' data-trigger='hover'>
-				<h4>CS6</h4>
-			</div>
-
-			<div class='span1 skill' rel='popover' title ='Guitar' data-content='Played the guitar for more than 10 years.' data-placement='bottom' data-trigger='hover'>
-				<h4>Am7#</h4>
-			</div>
-
-			<div class='span1 skill' rel='popover' title ="Improv'" data-content='Member of the Ecole Polytechnique Improvisational theatre team.' data-placement='bottom' data-trigger='hover'>
-				<h4>:-O</h4>
-			</div>
-
+		<div class='page-header' id='pastAnchor'>
+			<h1> Past Experience </h1>
 		</div>
-		<hr/>
 		<div class='row' id='cv'>
 			<div class='span6' id='education'>
 				<h2> Education </h2>
+				<hr>
 				<div class='row'>
 					<div class='span2'>
 						<h4>2010 - 2013</h4>
@@ -164,6 +185,7 @@
 			</div>
 			<div class='span6'>
 				<h2> Work Experience </h2>
+				<hr>
 				<div class='row'>
 					<div class='span2'>
 						<h4>Summer 2012</h4>
@@ -202,8 +224,8 @@
 		</div>
 		<div id='footer' class='container'>
 			<hr/>
-			<div class='row-fluid'>
-				<p> Attribution </p>
+			<div class='row'>
+				<div class='span12 text-center'><p>Built with Bootstrap.</p></div>
 			</div>
 		</div>
 		<script src="http://code.jquery.com/jquery-latest.js"></script>
