--- a/index.html
+++ b/index.html
@@ -228,6 +228,19 @@
 				<div class='span12 text-center'><p>Built with Bootstrap.</p></div>
 			</div>
 		</div>
+		<script type="text/javascript">
+
+		  var _gaq = _gaq || [];
+		  _gaq.push(['_setAccount', 'UA-37917549-1']);
+		  _gaq.push(['_trackPageview']);
+
+		  (function() {
+		    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+		    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+		    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+		  })();
+
+		</script>
 		<script src="http://code.jquery.com/jquery-latest.js"></script>
 		<script src="lib/bootstrap.min.js"></script>
 		<script src="main.js"></script>
