--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
 						<a href='http://github.com/jcaille'> Github profile </a>
 					</div>
 					<div class='span3 text-center'>
-						<a href='linkedin.com/pub/jean-caillé/44/693/146/'> LinkedIn Profile </a>
+						<a href='http://linkedin.com/pub/jean-caillé/44/693/146/'> LinkedIn Profile </a>
 					</div>
 					<div class='span3 text-center'>
-						<a href='cv.pdf'> Classic CV </a>
+						<a href='/CV.pdf'> Classic CV </a>
 					</div>
 				</div>
 			</div>
