--- a/index.html
+++ b/index.html
@@ -225,7 +225,10 @@
 		<div id='footer' class='container'>
 			<hr/>
 			<div class='row'>
-				<div class='span12 text-center'><p>Built with Bootstrap.</p></div>
+				<div class='span12 text-center'>
+					<p>Email : jean.caille [at] polytechnique.edu </p>
+					<p>Built with bootstrap </p>
+				</div>
 			</div>
 		</div>
 		<script type="text/javascript">
