--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@
 		<div id='projectAnchor' class='page-header'>
 			<h1 > Projects I've been working on :</h1>
 		</div>
-		<ul class='thumbnails' id='projects'>
+		<div id='projects'>
+		<ul class='thumbnails'>
 			<li class='span6'>
 				<div class="thumbnail mainProject">
 					<img src="img/rmc.png" class='img-rounded' alt="">
@@ -54,6 +55,9 @@
 					<p>CodeBar is a service that will allow users to place orders in busy bars using their phone. We’re a team of four people wanting to get a first hands-on experience with entrepreneurship. I started working on the web application a few months ago, and we’re currently looking for a bar willing to test our service and partner with us. </p>
 				</div>
 			</li>
+		</ul>
+		<h2> School Projects </h2>
+		<ul class='thumbnails'>
 			<li class='span4'>
 				<div class="thumbnail smallProject">
 					<img src="img/magnan.jpg" class='img-rounded'>
@@ -73,6 +77,7 @@
 				</div>
 			</li>
 		</ul>
+	</div>
 		<div class='page-header' id='skillsAnchor'>
 			<h1> Skills </h1>
 		</div>
@@ -86,7 +91,7 @@
 						<h5>FR</h5>
 					</div>
 
-					<div class='span1 skill' rel='popover' title ='English' data-content='Fluent : TOEFL IBT : 118/120' data-placement='bottom' data-trigger='hover'>
+					<div class='span1 skill' rel='popover' title ='English' data-content='<strong>Fluently</strong> spoken, understood and read. <br> TOEFL IBT (2012) : 118/120' data-placement='bottom' data-trigger='hover'>
 						<h5>EN</h5>
 					</div>
 				</div>
@@ -95,19 +100,21 @@
 				<h4>Programming Languages</h4>
 				<hr/>
 				<div class='row'>
-					<div class='span1 skill' rel='popover' title ='Python' data-content='Python 2.7 - Used in prototyping and production settings. Used major libary such as numpy and PIL.' data-placement='bottom' data-trigger='hover'>
+					<div class='span1 skill' rel='popover' title ='Python 2.7' data-content='
+					 Used in prototyping and production setting at Stupeflix.<br/>
+					 Learned and used major third-party libraries such as numpy and PIL for side projects.' data-placement='bottom' data-trigger='hover'>
 						<h5>.py</h5>
 					</div>
 
-					<div class='span1 skill' rel='popover' title ='Web Developement' data-content='HTML5 + CSS3 + Javacript - developped multiple website using libraries and framework such as jquery, backbone and bootstrap. Currently learning Django.' data-placement='bottom' data-trigger='hover'>
+					<div class='span1 skill' rel='popover' title ='Web Developement' data-content='HTML5 + CSS3 + Javacript. <br> Developped multiple websites using libraries and framework such as jquery and bootstrap. <br>Currently learning Django.' data-placement='bottom' data-trigger='hover'>
 						<h5>.php</h5>
 					</div>
 
-					<div class='span1 skill' rel='popover' title ='Java' data-content='Used as a learning tool - Familliar with most concept of OO-Programming.' data-placement='bottom' data-trigger='hover'>
+					<div class='span1 skill' rel='popover' title ='Java' data-content='Used primarily in school as a learning tool. <br> Familliar with most concept of OO-Programming. <br>' data-placement='bottom' data-trigger='hover'>
 						<h5>.java</h5>
 					</div>
 
-					<div class='span1 skill' rel='popover' title ='C++' data-content='Used as a tool during a couple of projects. Basic knowledge of pointers and memory management.' data-placement='bottom' data-trigger='hover'>
+					<div class='span1 skill' rel='popover' title ='C++' data-content='Used as a tool during a couple of school-projects. Working knowledge of pointers and memory management.' data-placement='bottom' data-trigger='hover'>
 						<h5>.cpp</h5>
 					</div>
 				</div>
@@ -120,11 +127,11 @@
 						<h5>git</h5>
 					</div>
 
-					<div class='span1 skill' rel='popover' title ='OpenGL' data-content='Used OpenGL as well as OpenSceneGraph, both in C++ and Python.' data-placement='bottom' data-trigger='hover'>
+					<div class='span1 skill' rel='popover' title ='OpenGL' data-content='Learned and used OpenGL as well as OpenSceneGraph at Stupeflix.' data-placement='bottom' data-trigger='hover'>
 						<h5>GL</h5>
 					</div>
 
-					<div class='span1 skill' rel='popover' title ='OpenCV' data-content='Basic knowledge of OpenCV tools and paradigms.' data-placement='bottom' data-trigger='hover'>
+					<div class='span1 skill' rel='popover' title ='OpenCV' data-content='Basic knowledge of OpenCV tools.' data-placement='bottom' data-trigger='hover'>
 						<h5>CV</h5>
 					</div>
 				</div>
