--- a/index.html
+++ b/index.html
@@ -41,6 +41,28 @@
 		</div>
 		<div id='projects'>
 		<ul class='thumbnails'>
+			<li class='span12'>
+				<div class='thumbnail'>
+					<img src='img/smartrent.png' class='img-rounded'>
+					<h3> SmartRent <small> Winning Project of Startup-Weekend Paris - 2013 </small></h3>
+					<div class='row-fluid'>
+						<div class='span6'>
+							<h4> The project : </h4>
+							<p>
+								SmartRent is a Startup-weekend project. With a team of 8 (5 buisness / 3 dev), we developped and pitched a buisness idea : renting furniture to students in Paris. In 54 hours, we created a full buisness plan, did customer validation and developped the <a href='http://www.thesmartrent.co'>website</a>. We ultimately were awarded first prize in the Startup-Weekend competition. We are currently looking at ways to continue this project with the help of an incubator.
+							</p>
+						</div>
+						<div class='span6'>
+							<h4> What I did : </h4>
+							<p>
+								As a developper, I worked on the website. We quickly settled on a simple Django Backend, which we deployed in a few hours using Heroku. We spent the first day setting up the structure and the database and implementing the first unstyled view. During the second day, I focused on the front-end experience while the rest team fixed the remaining issues on the backend and worked on the checkout experience.
+							</p>
+						</div>
+					</div>
+				</div>
+			</li>
+		</ul>	
+		<ul class='thumbnails'>
 			<li class='span6'>
 				<div class="thumbnail mainProject">
 					<img src="img/rmc.png" class='img-rounded' alt="">
