--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 						<div class='span6'>
 							<h4> The project : </h4>
 							<p>
-								SmartRent is a Startup-weekend project. With a team of 8 (5 buisness / 3 dev), we developped and pitched a buisness idea : renting furniture to students in Paris. In 54 hours, we created a full buisness plan, did customer validation and developped the <a href='http://www.thesmartrent.co'>website</a>. We ultimately were awarded first prize in the Startup-Weekend competition. We are currently looking at ways to continue this project with the help of an incubator.
+								SmartRent is a Startup-weekend project. With a team of 8 (5 business / 3 dev), we developped and pitched a buisness idea : <strong>renting furniture to students in Paris</strong>. In 54 hours, we created a full buisness plan, did customer validation and developped the <a href='http://www.thesmartrent.co'>website</a>. We ultimately were awarded first prize in the Startup-Weekend competition. We are currently looking at ways to continue this project with the help of an incubator.
 							</p>
 						</div>
 						<div class='span6'>
