--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
 	<div class='hero-unit' id='hero'>
 		<h1> Jean Caillé </h1>
 		<p> Student and aspiring entrepreneur at Ecole Polytechnique. </p>
-		<p> I'm currently looking for : <strong> A 3 to 5 months research internship, starting April 2013. </strong></p>
+		<p> I'm currently looking for a <strong> part time developper job in Paris, France, starting in October 	2013.</strong>
+			<br>
+			Send me an email at jean.caille [a] polytechnique.edu
+		</p>
 	</div>
 	<div class='container'>
 		<div class='row'>
@@ -20,7 +23,7 @@
 				<img class='img-circle' src='img/headshot.jpg' id='myPicture'>
 			</div>
 			<div class='span9'>
-				<p><strong> Hello ! </strong> My name is Jean, I'm a third year student at the Ecole Polytechnique near Paris, France. Currently majoring in computer science, I'm thorouglhy interested in <strong>startups</strong>, and have up to know worked on several school and side projects related to entrepreneurship. I'm currently in the market for a <strong>3 to 5 months research internship</strong> at a startup. </p>
+				<p><strong> Hi ! </strong> My name is Jean, I'm a third year student at the Ecole Polytechnique near Paris, France. Currently majoring in computer science, I'm thorouglhy interested in <strong>startups</strong>, and have up to know worked on several school and side projects related to entrepreneurship. I'm currently in the market for a <strong>part time devlopper job</strong> in Paris, France, starting in October 2013. </p>
 				<p>Here, you'll find a short description of the <a href='#projectAnchor'>projects</a> i've been working on recently, as well as my skills and past work experiences.</p>
 				<hr>
 				<div class='row'>
@@ -217,12 +220,11 @@
 				<hr>
 				<div class='row'>
 					<div class='span2'>
-						<h4>Summer 2012</h4>
+						<h4>3/2013 - Now</h4>
 					</div>
 					<div class='span4'>
 						<h3> Stupeflix </h3>
-						<p>Interned for two months in a French startup providing an online video making tool.
-							where I learned and used <strong>Python, OpenGL and OpenSceneGraph</strong>, as well as managed customer service on a day-to-day basis.</p>
+						<p>Currently interning for a Five month research internship at a French Startup providing an online video making tool. Working on iPhone <strong>video stabilization</strong> and interpolation using gyroscope data.</p>
 						</div>
 					</div>
 					<div class='row'>
