--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 						<a href='http://linkedin.com/pub/jean-caillé/44/693/146/'> LinkedIn Profile </a>
 					</div>
 					<div class='span3 text-center'>
-						<a href='/CV.pdf'> Classic CV </a>
+						<a href='CV/CV_Jean_Caille_EN.pdf' id="classic-CV-download"> Classic CV </a>
 					</div>
 				</div>
 			</div>
@@ -82,6 +82,22 @@
 			</li>
 		</ul>
 		<h2> School Projects </h2>
+		<ul class='thumbnails'>
+			<li class='span6'>
+				<div class="thumbnail mainProject">
+					<img src="img/rendering.png" class='img-rounded' alt="">
+					<h3>Procedural World Rendering <small> 2012 </small> </h3>
+					<p> As a 3-personn team, we created this procedural world using Cinder, GLSL on top of OpenGL. It features real-time shading, clever texturing dependant on slope and height and dynamic lighning of water to recreate waves using normal maps.  </p>
+				</div>
+			</li>
+			<li class='span6'>
+				<div class="thumbnail mainProject">
+					<img src="img/gol.jpg" class='img-rounded' alt="Image courtesy of ryanraffa.com">
+					<h3>Parallel Game of Life <small> 2012 </small></h3>
+					<p> We implemented algorithm for Conway's Game of Life using Sequential Java, Java Threading, Java RMI and CUDA in order to compare parallel and sequential programming performances on thi textbook parallel problem.  </p>
+				</div>
+			</li>
+		</ul>
 		<ul class='thumbnails'>
 			<li class='span4'>
 				<div class="thumbnail smallProject">
