--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
 						<h4>2010 - 2013</h4>
 					</div>
 					<div class='span4'>
-						<h3> Ecole Polytecnique </h3>
+						<h3> Ecole Polytechnique </h3>
 						<p>Currently in third-year at France’s leading university for high-level scientific training. Majoring in <strong>Computer Science</strong> and Computer Vision.</p>
 					</div>
 				</div>
