--- a/impro/index.html
+++ b/impro/index.html
@@ -58,7 +58,7 @@
                   <div class="span4">
                     <h4>Jean Caillé</h4>
                     <h4>23 Décembre 1991</h4>
-                    <h4>21 Rue du Poteau, Paris 18ème</h4>
+                    <h4>41 Rue du Poteau, Paris 18ème</h4>
                     <h4>Stagiaire chez <a href="http://stupeflix.com"> Stupeflix </a></h4>
                     <h4>Gnou ascendant Moule à un bras</h4>
                   </div>
@@ -88,7 +88,7 @@
 
           <div class='row'>
             <div class="span8">
-              <p id="first-year-p-1"> Je suis né le <strong class="has-tooltip" data-toggle="tooltip" title="Il fesait 2°C le jour ou je suis sorti de la maternité"> 23 décembre 91 </strong> à Metz, dans le froid Lorrain. J'ai passé une petite année là bas avant de démenager à Nantes ou est né mon <strong class="has-tooltip" data-toggle="tooltip" title="Il s'appelle Pierre et a 20 ans"> petit frère </strong>.</p> 
+              <p id="first-year-p-1"> Je suis né le <strong class="has-tooltip" data-toggle="tooltip" title="Il fesait 2°C le jour ou je suis sorti de la maternité"> 23 décembre 91 </strong> à Metz, dans le froid Lorrain. J'ai passé une petite année là bas avant de déménager à Nantes ou est né mon <strong class="has-tooltip" data-toggle="tooltip" title="Il s'appelle Pierre et a 20 ans"> petit frère </strong>.</p> 
             </div>
             <div class="span4">
               <img class="img-rounded" src="images/luge.jpg" alt="On était pas mignon ?"/>
@@ -100,7 +100,7 @@
               <img class="img-rounded" src="images/rennes.jpg"/>
             </div>
             <div class="span8">
-              <p id="first-year-p-2"> Encore quelque années après, toute la famille a démenagé à Marpiré, village un peu perdu dans le far-east breton. On s'est retrouvé après quelques années à figurer dans une <strong class="has-tooltip" data-toggle="tooltip" title="Plus de 100 figurants et quelques acteur professionels !">super-production</strong> théatrale locale au Chateau de Vitré racontant la rattachement de la Bretagne à la France au 15eme siècle.</p>
+              <p id="first-year-p-2"> Encore quelque années plus tard, toute la famille a démeéagé à Marpiré, village un peu perdu dans le far-east Breton. J'ai vécu ma première expérience sur scène dans une <strong class="has-tooltip" data-toggle="tooltip" title="Plus de 100 figurants et quelques acteur professionels !">super-production</strong> théatrale locale au Chateau de Vitré racontant la rattachement de la Bretagne à la France au 15eme siècle.</p>
             </div>
           </div>
         </div>
@@ -148,7 +148,7 @@
               <img class="img-rounded" src="images/impro2.jpg"/>
             </div>
             <p class="span8" id="discover-p-3">
-              Après de nombreux entrainements, armé d'un humour douteux et d'un goût certain pour lesjeux de mots inutiles, me voila confronté aux premiers matchs des improvisades. Victoires parfois, défaites de temps en temps, mais bonne ambiance toujours.  <strong class="has-tooltip" data-toggle="tooltip" title="Et le dieu Gnou qui nous surveille">La chance</strong> nous envoie en Finale, où du public, j'assiste à la victoire glorieuse de l'improbinet 2010.
+              Après de nombreux entrainements, armé d'un humour douteux et d'un goût certain pour les jeux de mots inutiles, me voila confronté aux premiers matchs des improvisades. Victoires parfois, défaites de temps en temps, mais bonne ambiance toujours.  <strong class="has-tooltip" data-toggle="tooltip" title="Et le dieu Gnou qui nous surveille">La chance</strong> nous envoie en Finale, où du public, j'assiste à la victoire glorieuse de l'improbinet 2010.
             </p>
           </div>
 
@@ -175,7 +175,7 @@
 
           <div class="row">
             <p class="span8" id="son-p-1">
-              Fier comme des gnous, on continue à s'entrainer et s'amuser entre nous. On accueil également les petits nouveaux, et on leur transmet  <strong class="has-tooltip" data-toggle="tooltip" title="Ca devait tenir sur une demi feuille A4, écrit en gros">tout notre savoir</strong>. L'année se termine en avril 2013, et il est venu le temps de quitter le cocon platalesque
+              Fier comme des gnous, on continue à s'entrainer et s'amuser entre nous. On accueil également les petits nouveaux, et on leur transmet  <strong class="has-tooltip" data-toggle="tooltip" title="Ca devait tenir sur une demi feuille A4, écrit en gros">tout notre savoir</strong>. L'année se termine en avril 2013, et il est venu le temps de quitter le cocon platalesque.
             </p>
             <div class="span4">
               <img class="img-rounded" src="images/camille.jpg"/>
