--- a/impro/index.html
+++ b/impro/index.html
@@ -207,7 +207,7 @@
         <div class="container" id="skill">
           <div class="row">
             <h1 class="page-header">
-              Qualités et Défaults
+              Qualités et Défauts
             </h1>
           </div>
       <div class="row">
